--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     background-color: rgb(4,29, 49);
 }
 table{
-    color:white;
+    color:black;
     background-color: rgb(25, 113, 48);
     border-collapse: collapse;
     font-size: 16px;
